--- a/detail.html
+++ b/detail.html
@@ -174,7 +174,7 @@
             <div class="paiment-content">
                 <div class="mode">
                     <h3>Mode de paiement</h3>
-                    <p>Payez plus tard à la livraison par carte bancaire ou par cash</p>
+                    <p>Payez plus tard à la livraison par Virtual Wallet ou par cash</p>
                 </div>
                 <div class="detail">
                     <h3>Détails du paiement</h3>
@@ -202,18 +202,7 @@
                 </div>
                 <div class="detail-exp">
                     <h3>Détails d'expédition</h3>
-                    <!-- <div>
-                        <h3>Colis 1</h3>
-                        <span>Livraison à domicile.Expédié par Income
-                            Livraison entre le 22 février et le 23 février
-                        </span>
-                    </div>
-                    <div>
-                        <h3>Colis 2</h3>
-                        <span>Livraison à domicile.Expédié par Income
-                            Livraison entre le 22 février et le 23 février
-                        </span>
-                    </div> -->
+                    
                 </div>
             </div>
         </div>
