--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             </div> 
 
             <i class="uil uil-search"></i>
-            <i id="cart-box" aria-controls="cart-icon" class="uil uil-shopping-bag" data-quantity="0"></i>    
+            <i id="cart-box" class="uil uil-shopping-bag" data-quantity="0"></i>
+            <i id="cart-box" class="uil uil-envelope-check" data-quantity="0"></i>    
 
             <!-- ================================================ -->
         </div>
