--- a/admin/orders.html
+++ b/admin/orders.html
@@ -61,11 +61,12 @@
                                 
                         </ul>
 
-                        <div>
+                        <div id="select-box-commande">
                             <h3>Commande State</h3>
                             <div class="select-box-commande">
                                 <select id="commande-select">
                                     <option value="" selected>Currente state</option>
+                                    <option class="option0" value="progress">Progress</option>
                                     <option class="option3_1" value="report-returned">Report</option>
                                     <option class="option1_1" value="dismiss-returned">Dismiss</option>
                                     <option class="option1_2" value="dismiss-delivered">Dismiss</option>
