--- a/track.html
+++ b/track.html
@@ -186,7 +186,7 @@
                     <i class="uil ieight uil-check"></i>
                 </div>
                 <div>
-                    <p class="text">Commande retournée</p>
+                    <p class="text eightText">Commande retournée</p>
                     <p class="text1 time1"></p>
                 </div>
             </li>
