Mini project version 1

--- a/track.html
+++ b/track.html
@@ -102,6 +102,7 @@
 
     <section class="second">
         <ul>
+            <h3 class="report-text">Réporte : <span class="report-date"></span></h3>
             <li id="one" style="display: none;">
                 <i class="icon uil uil-capture"></i>
                 <div class="progress one">
@@ -164,7 +165,7 @@
                     <i class="uil isix uil-check"></i>
                 </div>
                 <div>
-                    <p class="text">Commande livrée</p>
+                    <p class="text sixText">Commande livrée</p>
                     <p class="text1 time1"></p>
                 </div>
             </li>
