--- a/blog.html
+++ b/blog.html
@@ -38,13 +38,16 @@
             <div class="logo">
                 <img src="image/logo.png" alt="">
             </div>
-            <button class="mobile-close-btn" data-visible="false" 
+            <!-- <button class="mobile-close-btn" data-visible="false" 
             aria-controls="primary-navigation"><i class="uil uil-times-circle"></i>
-            </button>             
+            </button>              -->
             <nav>
                 <ul id="primary-navigation" data-visible="false"
                 class="primary-navigation flex">
-                <li><a class="fs-100 fs-montserrat bold-500" href="/index.html">Home</a></li>
+                <li>
+                    <i class="uil mobile-close-btn uil-times-circle"></i>
+                    <a class="fs-100 fs-montserrat bold-500" href="/index.html">Home</a>
+                </li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/shop.html">Shop</a></li>
                 <!--<li><a class="fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li>-->
                 <li><a class="fs-100 fs-montserrat bold-500" href="/about.html">Abouts Us</a></li>
