--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--============Icon Cdn==============-->
 
     <!-- ===============Bootstrap================= -->
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -29,7 +29,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
 
     <!-- ===============Bootstrap================= -->
 
@@ -50,9 +50,7 @@
             <div class="logo">
                 <img src="image/logo.png" alt="">
             </div>
-            <!-- <button class="mobile-close-btn" data-visible="false" 
-            aria-controls="primary-navigation"><i class="uil uil-times-circle"></i>
-            </button>              -->
+
             <nav>
                 <ul id="primary-navigation" data-visible="false"
                 class="primary-navigation flex">
@@ -61,7 +59,6 @@
                     <a class="active fs-100 fs-montserrat bold-500" href="/index.html">Home</a>
                 </li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/shop.html">Shop</a></li>
-                <!--<li><a class="fs-100 fs-montserrat bold-500" href="/product.html">Product</a></li>-->
                 <li><a class="fs-100 fs-montserrat bold-500" href="/about.html">Abouts Us</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/blog.html">Blog</a></li>
                 <li><a class="fs-100 fs-montserrat bold-500" href="/contactus.html">Contact Us</a></li>
@@ -84,9 +81,7 @@
 
             <i class="uil uil-search"></i>
             <i id="cart-box" class="uil uil-shopping-bag" data-quantity="0"></i>
-            <i id="cart-box" class="uil uil-envelope-check" data-quantity="0"></i>    
 
-            <!-- ================================================ -->
         </div>
         <div class="mobile-open-btn">
             <i class="uil uil-align-right"></i>
