--- a/home.html
+++ b/home.html
@@ -248,98 +248,12 @@
     </header>
 
     <main id="main">
-      <!-- <div class="hero">
-        <div class="glide" id="glide1">
-          <div class="glide__track" data-glide-el="track">
-            <ul class="glide__slides">
-              <li class="glide__slide">
-                <div class="center">
-                  <div class="left">
-                    <span>New Inspiration 2021</span>
-                    <h1>NEW COLLECTION</h1>
-                    <p>Trending from men's and women's style collection</p>
-                    <a href="" class="hero-btn">SHOW NOW</a>
-                  </div>
-                  <div class="right">
-                    <img src="image/hero-1.png" class="img1" alt="" />
-                  </div>
-                </div>
-              </li>
-              <li class="glide__slide">
-                <div class="center">
-                  <div class="left">
-                    <span>New Inspiration 2021</span>
-                    <h1>NEW COLLECTION</h1>
-                    <p>Trending from men's and women's style collection</p>
-                    <a href="" class="hero-btn">SHOW NOW</a>
-                  </div>
-                  <div class="right">
-                    <img src="image/hero-2.png" class="img2" alt="" />
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <section class="slider">
-        <main class="hero-section">
-          <div>
-            <h1 class="fs-200 text-red fs-poppins">
-              SALE UP TO 30% OFF
-              <span
-                class="big-wireless text-black block fs-300 bold-900 fs-poppins"
-                >Apple Watch Series</span
-              ><span class="text-black fs-poppins fs-50"
-                >Feature packed at a better value than ever Powerful sensirs to
-                monitor your fitness</span
-              >
-            </h1>
-            <img src="image/h1-removebg.png" alt="" />
-          </div>
-          <div class="hero-inner flex">
-            <div>
-              <button class="large-btn bg-red text-white fs-poppins fs-50">
-                Shop By Category
-              </button>
-            </div>
-          </div>
-        </main>
-        <main class="hero-section">
-          <div>
-            <h1 class="fs-200 text-red fs-poppins">
-              New Arrivals collection
-              <span
-                class="big-wireless text-black block fs-300 bold-900 fs-poppins"
-                >iPhone Accessories</span
-              ><span class="text-black fs-poppins fs-50"
-                >Snap on a case, wallet, wireless charger battery pack all
-                accessories you're looking</span
-              >
-            </h1>
-            <img src="image/h2-removebg-preview.png" alt="" />
-          </div>
-          <div class="hero-inner flex">
-            <div>
-              <button class="large-btn bg-red text-white fs-poppins fs-50">
-                Shop By Category
-              </button>
-            </div>
-          </div>
-        </main>
-      </section> -->
-
       <div class="slider">
         <div class="hero-slider-active-2">
-          <!-- Slide 1 -->
+          <!-- mobile : 320px && ipad : 520px && desktop : 620px -->
           <div
             class="single-hero-slider bg-img slider-height-2"
-            style="
-              background-image: url('image/h1.jpg');
-              width: 100%;
-              height: 520px;
-            "
+            style="background-image: url('image/h1.jpg'); height: 620px"
           >
             <div class="hero-slider-content">
               <h4 class="animate-text delay-1">SALE UP TO 30% OFF</h4>
@@ -353,14 +267,9 @@
               ></a>
             </div>
           </div>
-          <!-- Slide 2 -->
           <div
             class="single-hero-slider bg-img slider-height-2"
-            style="
-              background-image: url('image/h2.jpg');
-              width: 100%;
-              height: 520px;
-            "
+            style="background-image: url('image/h2.jpg'); height: 620px"
           >
             <div class="hero-slider-content">
               <h4 class="animate-text delay-1">New arrivals collection</h4>
@@ -376,6 +285,39 @@
           </div>
         </div>
       </div>
+
+      <!-- <div class="slider">
+        <div class="hero-slider-active-2">
+          <div class="single-hero-slider bg-img slider-height-2">
+            <img src="image/h1.jpg" alt="" />
+            <div class="hero-slider-content">
+              <h4 class="animate-text delay-1">SALE UP TO 30% OFF</h4>
+              <h1 class="animate-text delay-2">Apple Watch Series</h1>
+              <p class="animate-text delay-3">
+                Feature packed at a better value than ever Powerful sensors to
+                monitor your fitness
+              </p>
+              <a href="#" class="btn-style-1 animate-text delay-4"
+                >Shop Now <i class="uil uil-arrow-right"></i
+              ></a>
+            </div>
+          </div>
+          <div class="single-hero-slider bg-img slider-height-2">
+            <img src="image/h2.jpg" alt="" />
+            <div class="hero-slider-content">
+              <h4 class="animate-text delay-1">New arrivals collection</h4>
+              <h1 class="animate-text delay-2">iPhone Accessories</h1>
+              <p class="animate-text delay-3">
+                Snap on a case, wallet, wireless charger battery pack all
+                accessories you’re looking
+              </p>
+              <a href="#" class="btn-style-1 animate-text delay-4"
+                >Shop Now <i class="uil uil-arrow-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div> -->
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
