Mini project version 2.7

--- a/home.html
+++ b/home.html
@@ -69,8 +69,8 @@
       <input class="searchInput" type="text" placeholder="Search our store" />
     </div>
 
-    <header class="myheader">
-      <div class="headerTop fs-poppins fs-100">
+    <header id="header" class="myheader">
+      <div id="headerTop" class="headerTop fs-poppins fs-100">
         <div class="phone">+227 98 66 32 48</div>
         <div class="location">Store location</div>
         <div class="log">Log In / Sign Up</div>
@@ -286,38 +286,150 @@
         </div>
       </div>
 
-      <!-- <div class="slider">
-        <div class="hero-slider-active-2">
-          <div class="single-hero-slider bg-img slider-height-2">
-            <img src="image/h1.jpg" alt="" />
-            <div class="hero-slider-content">
-              <h4 class="animate-text delay-1">SALE UP TO 30% OFF</h4>
-              <h1 class="animate-text delay-2">Apple Watch Series</h1>
-              <p class="animate-text delay-3">
-                Feature packed at a better value than ever Powerful sensors to
-                monitor your fitness
-              </p>
-              <a href="#" class="btn-style-1 animate-text delay-4"
-                >Shop Now <i class="uil uil-arrow-right"></i
-              ></a>
-            </div>
+      <div class="categories-area">
+        <div class="custom-container1">
+          <div class="section-title-1">
+            <h2>Trending Categories</h2>
           </div>
-          <div class="single-hero-slider bg-img slider-height-2">
-            <img src="image/h2.jpg" alt="" />
-            <div class="hero-slider-content">
-              <h4 class="animate-text delay-1">New arrivals collection</h4>
-              <h1 class="animate-text delay-2">iPhone Accessories</h1>
-              <p class="animate-text delay-3">
-                Snap on a case, wallet, wireless charger battery pack all
-                accessories you’re looking
-              </p>
-              <a href="#" class="btn-style-1 animate-text delay-4"
-                >Shop Now <i class="uil uil-arrow-right"></i
-              ></a>
+          <div class="categories-slider-1">
+            <!-- =================1========================= -->
+            <div class="categories-wrap">
+              <div class="categories-img categories-img-zoom">
+                <a href="/collections/example">
+                  <img src="image/categories/1.jpg" alt="Example Category" />
+                </a>
+              </div>
+              <div class="categories-content text-center">
+                <h3><a href="/collections/example">Watch</a></h3>
+              </div>
+            </div>
+
+            <!-- =================2========================= -->
+            <div class="categories-wrap">
+              <div class="categories-img categories-img-zoom">
+                <a href="/collections/example2">
+                  <img src="image/categories/2.jpg" alt="Example Category 2" />
+                </a>
+              </div>
+              <div class="categories-content text-center">
+                <h3><a href="/collections/example2">iPhone</a></h3>
+              </div>
+            </div>
+
+            <!-- =================3========================= -->
+            <div class="categories-wrap">
+              <div class="categories-img categories-img-zoom">
+                <a href="/collections/example2">
+                  <img src="image/categories/3.jpg" alt="Example Category 2" />
+                </a>
+              </div>
+              <div class="categories-content text-center">
+                <h3><a href="/collections/example2">Mini speakers</a></h3>
+              </div>
+            </div>
+
+            <!-- =================4========================= -->
+            <div class="categories-wrap">
+              <div class="categories-img categories-img-zoom">
+                <a href="/collections/example2">
+                  <img src="image/categories/4.jpg" alt="Example Category 2" />
+                </a>
+              </div>
+              <div class="categories-content text-center">
+                <h3><a href="/collections/example2">Tablets</a></h3>
+              </div>
+            </div>
+
+            <!-- =================5========================= -->
+            <div class="categories-wrap">
+              <div class="categories-img categories-img-zoom">
+                <a href="/collections/example2">
+                  <img src="image/categories/5.jpg" alt="Example Category 2" />
+                </a>
+              </div>
+              <div class="categories-content text-center">
+                <h3><a href="/collections/example2">Headphones</a></h3>
+              </div>
+            </div>
+
+            <!-- =================6========================= -->
+            <div class="categories-wrap">
+              <div class="categories-img categories-img-zoom">
+                <a href="/collections/example2">
+                  <img src="image/categories/6.jpg" alt="Example Category 2" />
+                </a>
+              </div>
+              <div class="categories-content text-center">
+                <h3><a href="/collections/example2">Laptop</a></h3>
+              </div>
+            </div>
+
+            <!-- =================7========================= -->
+            <div class="categories-wrap">
+              <div class="categories-img categories-img-zoom">
+                <a href="/collections/example2">
+                  <img src="image/categories/7.jpg" alt="Example Category 2" />
+                </a>
+              </div>
+              <div class="categories-content text-center">
+                <h3><a href="/collections/example2">Accessories</a></h3>
+              </div>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
+
+      <div class="banner-area pb-40">
+        <div class="custom-container1">
+          <div class="row">
+            <!-- Bannière 1 -->
+            <div class="col-12 col-xl-6 col-lg-6 col-md-6">
+              <div class="banner-wrap wow tmFadeInUp mb-30">
+                <div class="banner-img banner-img-zoom">
+                  <a href="/products/product-2">
+                    <img src="image/banner/banner1.jpg" alt="Product 2" />
+                  </a>
+                </div>
+                <div class="banner-content-1 text-center">
+                  <span>Security Smart Camera</span>
+                  <h2>Just Starting at $850</h2>
+                  <div class="btn-style-1">
+                    <a
+                      class="font-size-14 btn-1-padding-2"
+                      href="/products/product-2"
+                      >Shop Now</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Bannière 2 -->
+            <div class="col-12 col-xl-6 col-lg-6 col-md-6">
+              <div class="banner-wrap wow tmFadeInUp mb-30">
+                <div class="banner-img banner-img-zoom">
+                  <a href="/products/product-2">
+                    <img src="image/banner/banner2.jpg" alt="Product 2" />
+                  </a>
+                </div>
+                <div class="banner-content-1 text-center">
+                  <span>Entertainment & Games</span>
+                  <h2>Just Starting at $850 Hurry up!</h2>
+                  <div class="btn-style-1">
+                    <a
+                      class="font-size-14 btn-1-padding-2"
+                      href="/products/product-2"
+                      >Shop Now</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
